--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
     "author": {
-        "name": "Sven, mailsvb@gmail.com"
+        "name": "sven.beisiegel@mitel.com"
     },
     "description": "node-red node for handling API calls to OpenScape Endpoint Management",
     "name": "node-red-contrib-osem",
     "keywords": [ "node-red", "OpenScape", "OSEM", "CP", "Devices", "Mitel", "Unify" ],
     "node-red": {
-        "version": ">=3.0.0",
+        "version": ">=4.0.0",
         "nodes": {
             "osem-api": "osem.js"
         }
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/mailsvb/node-red-contrib-osem.git"
+        "url": "git+https://github.com/DE-MUC-UCC-OSEM/node-red-contrib-osem.git"
     },
     "engines": {
-        "node": ">=18.0.0"
+        "node": ">=20.0.0"
     },
-    "homepage": "https://github.com/mailsvb/node-red-contrib-osem#readme",
+    "homepage": "https://github.com/DE-MUC-UCC-OSEM/node-red-contrib-osem#readme",
     "version": "1.0.0"
 }
