--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [ -n "${{ github.event.inputs.version }}" ]; then
-            if ! echo "${{ github.event.inputs.version }}" | grep -qE '^[0-9]+\.[0-9]+\.[0-9]{4,6}$'; then
+            if ! echo "${{ github.event.inputs.version }}" | grep -qE '^[0-9]{1}\.[0-9]+\.[0-9]+$'; then
               echo "Version is not in expected format."
               exit 1
             fi
