--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,8 +18,6 @@ jobs:
     permissions:
       contents: write
       packages: write
-      attestations: write
-      id-token: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -45,19 +43,13 @@ jobs:
           git -c user.name="actions bot" -c user.email="actions-bot@users.noreply.github.com" commit -m "Set version to $(cat package.json | jq -r '.version')"
           git push origin ${{ github.ref_name }}
 
-      - name: Create Package
-        run: |
-          npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_VERSION: ${{ github.event.inputs.version }}
         run: |
-          echo -e "OpenScape Endpoint Management Node-RED node version $RELEASE_VERSION\n" > rn
-          gh release create "$RELEASE_VERSION" \
+          echo -e "OpenScape Endpoint Management Node-RED contribution node v$RELEASE_VERSION\n" > rn
+          gh release create "v$RELEASE_VERSION" \
               --repo="$GITHUB_REPOSITORY" \
-              --title="$RELEASE_VERSION" \
+              --title="node-red-contrib-osem v$RELEASE_VERSION" \
               --notes-file rn
