--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "version": ">=4.0.0",
         "nodes": {
             "osem-api": "osem.js",
-            "osem-out": "output.js"
+            "osem-out": "output.js",
+            "osem-evt": "events.js"
         }
     },
     "repository": {
